minor HTML cleanup

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 	<header id = "top">
-		<p class = "quoteheader">Don Norman</p>
+		<p class = "quoteheader">Don Norman</p>
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
 	</header>
 	<blockquote>
 		<p class = "quoteheader">Preface</p>
-		<p>The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.</p>
+		<p>The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.</p>
 	</blockquote>
 	<article>
 
@@ -102,9 +102,9 @@
 			<header>
 				<p>The promise of good design</p>
 			</header>
-			<p>Jeremy Myerson, a designer at London’s Royal College of Art (and a good friend) curated an enticing exhibit at London’s Design Museum entitled “New Old,” that explored the potential for design and designers to enhance the experience of our later lives (described in this Fast Company <a href="https://www.fastcompany.com/3067220/why-you-should-be-designing-for-your-73-year-old-self" target="_blank">article</a> (Why you should be designing for your 73-year-old self).</a> Walkers, scooters, and shopping carts for the elderly tend to lack any semblance of grace or elegance. Not so the “scooter for life,” designed by the British firm PriestmanGoode, which has three wheels for stability and a sleek pouch for storing groceries.</p>
+			<p>Jeremy Myerson, a designer at London’s Royal College of Art (and a good friend) curated an enticing exhibit at London’s Design Museum entitled “New Old,” that explored the potential for design and designers to enhance the experience of our later lives (described in this Fast Company <a href="https://www.fastcompany.com/3067220/why-you-should-be-designing-for-your-73-year-old-self" target="_blank">article</a> “Why you should be designing for your 73-year-old self”).</a> Walkers, scooters, and shopping carts for the elderly tend to lack any semblance of grace or elegance. Not so the “scooter for life,” designed by the British firm PriestmanGoode, which has three wheels for stability and a sleek pouch for storing groceries.</p>
 			<p>Powerful lightweight motors and batteries promise to motorize many new things, including walkers, wheelchairs, bicycles, tricycles, baby carriages, and shopping carts. I’ve even seen electric surfboards. If these devices are stylish and useful, they will empower everyone, from the very young to the very old. Moreover, once the stigma attached to devices that look medical is eliminated, we will see more elderly adding to their activities, and more 90-year-olds surfing. One of my 90-year-old friends just started scuba diving. Age is not a barrier.</p>
-			<p>Are there any other examples of promising designs for older people? Yes, but they are surprisingly difficult to find. They are so rare that when they are found, museums put on them on exhibit and newspapers write <a href= "https://www.wsj.com/articles/SB10001424052970203804204577018250924575384" target="_blank">articles.</a></p>
+			<p>Are there any other examples of promising designs for older people? Yes, but they are surprisingly difficult to find. They are so rare that when they are found, museums put on them on exhibit and newspapers write <a href= "https://www.wsj.com/articles/SB10001424052970203804204577018250924575384" target="_blank">articles.</a></p>
 		</section>
 
 		<div class = "links" id = "ahead">
@@ -120,18 +120,18 @@
 			<header>
 				<p>Looking ahead</p>
 			</header>
-			<p>Designers and companies of the world, you are badly serving an ever-growing segment of your customer base, a segment that you too will one day inhabit. Isn’t it time to reform: to make things that are functional and stylish, useable and accessible? Every ailment that I described that impacts the elderly is also present in people of all ages. Designs that make it easier for elderly people often are of equal value for younger people. In fact, for everyone. Help the elderly, and the results will help many more, including yourself, someday.</p>
+			<p>Designers and companies of the world, you are badly serving an ever-growing segment of your customer base, a segment that you too will one day inhabit. Isn’t it time to reform: to make things that are functional and stylish, useable and accessible? Every ailment that I described that impacts the elderly is also present in people of all ages. Designs that make it easier for elderly people often are of equal value for younger people. In fact, for everyone. Help the elderly, and the results will help many more, including yourself, someday.</p>
 		</section>
 
 	</article>
 
 	<blockquote>
 		<p class = "quoteheader">About the author</p>
-		<p>Don Norman is a leading authority on the design of emotional pleasing and useable technology. He is the author of Design of Everyday Things and Emotional Design, a former vice president at Apple, and professor and director of the Design Lab at the University of California, San Diego.</p>
+		<p>Don Norman is a leading authority on the design of emotional pleasing and useable technology. He is the author of Design of Everyday Things and Emotional Design, a former vice president at Apple, and professor and director of the Design Lab at the University of California, San Diego.</p>
 	</blockquote>
 
 	<footer>
-		<p><a href="">Original Article</a></p>
+		<p><a href="https://www.fastcompany.com/90338379/i-wrote-the-book-on-user-friendly-design-what-i-see-today-horrifies-me" target="_blank">Original Article</a></p>
 		<p>Type + Interaction Project 02: Spread</p>
 		<p>Kinza & Michael</p>
 	</footer>
