--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
-	<header id = "top">
+	<div class ="notice"><p>Turn on increased contrast to read article</p></div>
+	<header class = "blur1" id = "top">
 		<p class = "quoteheader">Don Norman</p>
 		<h1>I wrote the book on user-friendly design. What I see today horrifies me.</h1>
 	</header>
-	<blockquote>
+	<blockquote class = "blur2">
 		<p class = "quoteheader">Preface</p>
 		<p>The world is designed against the elderly, writes Don Norman, 83-year-old author of the industry bible Design of Everyday Things and a former Apple VP.</p>
 	</blockquote>
 	<article>
 
-		<div id = "intro" class = "links beginning">
+		<div id = "intro" class = "links beginning blur3">
 			<a class = "activelinkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -28,7 +29,7 @@
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
   		</div>
 	
-		<section>
+		<section class = "blur3">
 			<header>
 				<p>Introduction</p>
 			</header>
@@ -36,7 +37,7 @@
 				<p>Those of us who are still active and healthy at advanced ages –<wbr>I qualify–<wbr> discover that we aren’t quite as capable as our younger selves. That doesn’t mean that we aren’t healthy and workable–<wbr>I still have a very active job and travel on business around the world, but I have to admit that I’m getting slower and weaker, with diminished eyesight, hearing, taste, touch, and, well, almost everything physical. The number of active, healthy oldsters is large–<wbr>and increasing. We are not a niche market. And businesses should take note: We are good customers often with more free time and discretionary income than younger people.</p>
 		</section>
 
-		<div class = "links" id = "consumer">
+		<div class = "links blur3" id = "consumer">
 				<a class = "linkbutton" href="#intro">Intro</a>
 				<a class = "activelinkbutton" href="#consumer">Needs</a>
 				<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -45,7 +46,7 @@
 				<a class = "linkbutton" href="#ahead">Looking Ahead</a>
 		</div>
 
-		<section>
+		<section class = "blur3">
 			<header>
 				<p>What older consumers want and need</p>
 			</header>
@@ -54,7 +55,7 @@
 			<p><a href="https://www.nia.nih.gov/health/hearing-and-hearing-loss/hearing-loss-common-problem-older-adults"target="_blank">Hearing&nbsp;decreases.</a> High frequencies are first to go, which also tends to impair directional sensitivity, which in turn makes it more difficult to attend to someone in a crowded, noisy environment. Loud restaurants are torture. So, more and more, my wife and I select restaurants by their noise level rather than by their food quality. At home while watching TV, whether shows, streaming events, or movies, we always turn on the captions, which often block critical parts of the image. Even worse, when a film shows someone speaking in a foreign language, the film often translates the words, but so too does the closed captioning, and the two are placed on top of one another, making both attempts to help the viewer completely unhelpful.</p>
 		</section>
 
-		<div class = "links" id = "abounds">
+		<div class = "links blur4" id = "abounds">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "activelinkbutton" href="#abounds">Bad Design</a>
@@ -63,7 +64,7 @@
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
 		</div>
 
-		<section>
+		<section class = "blur4">
 			<header>
 				<p>Bad design abounds</p>
 			</header>
@@ -73,7 +74,7 @@
 			<p>Then there’s the aesthetic problem. When products are developed for the elderly, they tend to be ugly and an unwanted signal of fragility. As a result, people who need walkers or canes often resist. Once upon a time, a cane was stylish: Today it is seen as a medical device. Why can’t we have walkers and canes for everyday use, to help us in everyday life, to carry our packages, provide a way to sit when we are tired, or viewing some event, and yes, to maintain our balance? Make them items of pride, stylish enough that everyone will want one.</p>
 		</section>
 		
-		<div class = "links" id = "better">
+		<div class = "links blur5" id = "better">
 				<a class = "linkbutton" href="#intro">Intro</a>
 				<a class = "linkbutton" href="#consumer">Needs</a>
 				<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -82,14 +83,14 @@
 				<a class = "linkbutton" href="#ahead">Looking Ahead</a>
 		</div>
 
-		<section>
+		<section class = "blur5">
 			<header>
 				<p>Everyone needs better design</p>
 			</header>
 			<p>Do not think that thoughtful design is just for the elderly, or the sick, or the disabled. In the field of design, this is called “inclusive design” for a reason: It helps everyone. Curb cuts were meant to help people who had trouble walking, but it helps anyone wheeling things: carts, baby carriages, suitcases. Closed captions are used in noisy bars. As <a href= "https://www.amazon.com/stores/author/B07F2RCWVQ" target="_blank">Kat Holmes</a> points out in her book <a href="https://www.amazon.com/Mismatch-Inclusion-Simplicity-Technology-Business/dp/0262038889/ref=sr_1_fkmrnull_2?keywords=mismatch+kat+holmes&qid=1557171198&s=gateway&sr=8-2-fkmrnull&tag=wwwfccom-20" target="_blank">Mismatch,</a> all of us are disabled now and then. Some of us have permanent disabilities, but all of us have suffered from situational and temporary problems. When outside in the sun, the text message that just arrived is unreadable: wouldn’t it be nice if the display, whether cellphone, watch, or tablet, could switch to large, higher contrast lettering? Are elderly people handicapped? Maybe, but so is a young, athletic parent while carrying a baby on one arm and a bag of groceries in the other (and perhaps trying to open their car door). Ride-share bicycles and scooters cannot be used by people who need to carry bulky packages. Everyone has difficulty hearing people in noisy environments. Noise-canceling headphones are for everyone, not just the elderly. Almost anything that will help the elderly population will end up helping everyone.</p>
 		</section>
 
-		<div class = "links" id = "promise">
+		<div class = "links blur6" id = "promise">
 			<a class = "linkbutton" href="#intro">Intro</a>
 			<a class = "linkbutton" href="#consumer">Needs</a>
 			<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -98,7 +99,7 @@
 			<a class = "linkbutton" href="#ahead">Looking Ahead</a>
 		</div>
 		
-		<section>
+		<section class = "blur6">
 			<header>
 				<p>The promise of good design</p>
 			</header>
@@ -107,7 +108,7 @@
 			<p>Are there any other examples of promising designs for older people? Yes, but they are surprisingly difficult to find. They are so rare that when they are found, museums put on them on exhibit and newspapers write <a href= "https://www.wsj.com/articles/SB10001424052970203804204577018250924575384" target="_blank">articles.</a></p>
 		</section>
 
-		<div class = "links" id = "ahead">
+		<div class = "links blur7" id = "ahead">
 				<a class = "linkbutton" href="#intro">Intro</a>
 				<a class = "linkbutton" href="#consumer">Needs</a>
 				<a class = "linkbutton" href="#abounds">Bad Design</a>
@@ -116,7 +117,7 @@
 				<a class = "activelinkbutton" href="#ahead">Looking Ahead</a>
 		</div>
 
-		<section>
+		<section class = "blur7">
 			<header>
 				<p>Looking ahead</p>
 			</header>
@@ -125,12 +126,12 @@
 
 	</article>
 
-	<blockquote>
+	<blockquote class = "blur8">
 		<p class = "quoteheader">About the author</p>
 		<p>Don Norman is a leading authority on the design of emotional pleasing and useable technology. He is the author of Design of Everyday Things and Emotional Design, a former vice president at Apple, and professor and director of the Design Lab at the University of California, San Diego.</p>
 	</blockquote>
 
-	<footer>
+	<footer class = "blur9">
 		<p><a href="https://www.fastcompany.com/90338379/i-wrote-the-book-on-user-friendly-design-what-i-see-today-horrifies-me" target="_blank">Original Article</a></p>
 		<p>Type + Interaction Project 02: Spread</p>
 		<p>Kinza & Michael</p>
