--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	<footer class = "blur9">
 		<p><a href="https://www.fastcompany.com/90338379/i-wrote-the-book-on-user-friendly-design-what-i-see-today-horrifies-me" target="_blank">Original Article</a></p>
 		<p>Type + Interaction Project 02: Spread</p>
-		<p>Kinza & Michael</p>
+		<p>Designed by Kinza & Michael</p>
 	</footer>
 
 </body>
